Arrumando identacao nos yml de traducao, transformando arquivos de dos para unix e alterando formato do arquivo de iso-8859-1 para utf-8

--- a/config/locales/pt-BR/models/activity.yml
+++ b/config/locales/pt-BR/models/activity.yml
@@ -1,9 +1,9 @@
 pt-BR:
-	activerecord:
-		models:
-			activity: Atividade
-		attributes:
-			activity:
-				timetable: Hor·rio
-				description: DescriÁ„o
-				meeting_id: ID Encontro
+  activerecord:
+    models:
+      activity: Atividade
+    attributes:
+      activity:
+        timetable: Hor√°rio
+        description: Descri√ß√£o
+        meeting_id: ID Encontro
