--- a/config/locales/pt-BR/models/course.yml
+++ b/config/locales/pt-BR/models/course.yml
@@ -1,11 +1,11 @@
 pt-BR:
-	activerecord:
-		models:
-			course: Curso
-		attributes:
-			course:
-				code: Código
-				name: Nome
-				course_type: Tipo de curso
-				description: Descrição
-				active: Ativo
+  activerecord:
+    models:
+      course: Curso
+    attributes:
+      course:
+        code: CÃ³digo
+        name: Nome
+        course_type: Tipo de curso
+        description: DescriÃ§Ã£o
+        active: Ativo
