--- a/config/locales/pt-BR/models/registration.yml
+++ b/config/locales/pt-BR/models/registration.yml
@@ -1,10 +1,10 @@
 pt-BR:
-	activerecord:
-		models:
-			registration: Inscrição
-		attributes:
-			registration:
-				team_id: ID Turma
-				student_id: ID Aluno
-				code: Código
-				status: Status
+  activerecord:
+    models:
+      registration: InscriÃ§Ã£o
+    attributes:
+      registration:
+        team_id: ID Turma
+        student_id: ID Aluno
+        code: CÃ³digo
+        status: Status
