--- a/config/locales/pt-BR/models/service.yml
+++ b/config/locales/pt-BR/models/service.yml
@@ -1,12 +1,12 @@
 pt-BR:
-	activerecord:
-		models:
-			service: Serviço
-		attributes:
-			service:
-				name: Nome
-				number_days: Número de dias
-				estimated_time: Tempo estimado
-				default_value: Valor Padrão
-				inactive: Inativo
-				description: Descrição
+  activerecord:
+    models:
+      service: ServiÃ§o
+    attributes:
+      service:
+        name: Nome
+        number_days: NÃºmero de dias
+        estimated_time: Tempo estimado
+        default_value: Valor PadrÃ£o
+        inactive: Inativo
+        description: DescriÃ§Ã£o
