--- a/config/locales/pt-BR/models/activity.yml
+++ b/config/locales/pt-BR/models/activity.yml
@@ -6,4 +6,4 @@ pt-BR:
       activity:
         timetable: Horário
         description: Descrição
-        meeting_id: ID Encontro
+        meeting_id: Encontro
