--- a/config/locales/pt-BR/models/address.yml
+++ b/config/locales/pt-BR/models/address.yml
@@ -6,7 +6,7 @@ pt-BR:
       address:
         address: Endereço
         number: Número
-        person_id: ID Pessoa
+        person_id: Pessoa
         complement: Complemento
         zipcode: CEP
         country_id: Estado
