--- a/config/locales/pt-BR/models/interested_contact.yml
+++ b/config/locales/pt-BR/models/interested_contact.yml
@@ -6,4 +6,4 @@ pt-BR:
       interested_contact:
         date: Data
         description: Descrição
-        interested_id: Id Interessado
+        interested_id: Interessado
