--- a/config/locales/pt-BR/models/team.yml
+++ b/config/locales/pt-BR/models/team.yml
@@ -9,7 +9,7 @@ pt-BR:
         course_id: Curso
         season: Período
         limit: Limite de inscrições
-        price: Preço
+        price: Valor
         class_length: Quantidade de aulas
         workload: Carga horária
         note: Observações
